Bug 1735273 - Continue streaming thread after an initial same-as-before sample - r=canaltinova

Differential Revision: https://phabricator.services.mozilla.com/D128163